--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ p {
 
 .logo h1 {
     color: #007bff;
-    margin: 0;
+    margin: 10px;
     font-size: 2rem;
 }
 
